--- a/kali-HTB/Vagrantfile
+++ b/kali-HTB/Vagrantfile
@@ -2,120 +2,55 @@
 # /              * This file is for my HTB kali box
 # /              * Fashioned after my PNPT box
 # /                       (b/c I'm n00b)
+# / 
+# / Some notes:
+# 		- Checkout vagrant/Vagrantfile for default Vagrantfile to work off of
+# 		- Checkout kali-HTB/scripts for scripts this Vfile will use
+# 		-
 # /  ******************   ******************   ****************** /
 
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
-# All Vagrant configuration is done below. The "2" in Vagrant.configure
-# configures the configuration version (we support older styles for
-# backwards compatibility). Please don't change it unless you know what
-# you're doing.
+# / ****************** Start the Madness: ****************** /
 Vagrant.configure("2") do |config|
-  # The most common configuration options are documented and commented below.
-  # For a complete reference, please see the online documentation at
-  # https://docs.vagrantup.com.
+	# This is our box:
+	config.vm.box = "kalilinux/rolling" 
 
-  # Every Vagrant development environment requires a box. You can search for
-  # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "kalilinux/rolling" 
+ 	# We want it to update: 
+    config.vm.box_check_update = true
 
-  # Disable automatic box update checking. If you disable this, then
-  # boxes will only be checked for updates when the user runs
-  # `vagrant box outdated`. This is not recommended.
-  config.vm.box_check_update = true
+	# We don't want the VM to access our Vfile:
+    config.vm.synced_folder ".", "/vagrant", disabled: true
 
-  # Create a forwarded port mapping which allows access to a specific port
-  # within the machine from a port on the host machine. In the example below,
-  # accessing "localhost:8080" will access port 80 on the guest machine.
-  # NOTE: This will enable public access to the opened port
-  # config.vm.network "forwarded_port", guest: 80, host: 8080
+ # / ****************** VirtualBox Configs ****************** /
+	config.vm.provider "virtualbox" do |vb|
+		vb.name = "kali-HTB"
+		
+		# Display the VirtualBox GUI when booting the machine
+		vb.gui = true
+	 
+		# Customize the amount of memory on the VM:
+		vb.memory = "16000"
+		vb.cpus = 6
 
-  # Create a forwarded port mapping which allows access to a specific port
-  # within the machine from a port on the host machine and only allow access
-  # via 127.0.0.1 to disable public access
-  # config.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
-
-  # Create a private network, which allows host-only access to the machine
-  # using a specific IP.
-  # config.vm.network "private_network", ip: "192.168.33.10"
-
-  # Create a public network, which generally matched to bridged network.
-  # Bridged networks make the machine appear as another physical device on
-  # your network.
-  # config.vm.network "public_network"
-
-  # Share an additional folder to the guest VM. The first argument is
-  # the path on the host to the actual folder. The second argument is
-  # the path on the guest to mount the folder. And the optional third
-  # argument is a set of non-required options.
-  # config.vm.synced_folder "../data", "/vagrant_data"
-
-  # Disable the default share of the current code directory. Doing this
-  # provides improved isolation between the vagrant box and your host
-  # by making sure your Vagrantfile isn't accessable to the vagrant box.
-  # If you use this you may want to enable additional shared subfolders as
-  # shown above.
-  config.vm.synced_folder ".", "/vagrant", disabled: true
-
-  # Provider-specific configuration so you can fine-tune various
-  # backing providers for Vagrant. These expose provider-specific options.
-  # Example for VirtualBox:
-
-# / ****************** VirtualBox Configs ****************** /
-
- config.vm.provider "virtualbox" do |vb|
-  #   # Display the VirtualBox GUI when booting the machine
-    vb.gui = true
-    vb.name = "kali-HTB"
-
-  #
-  #   # Customize the amount of memory on the VM:
-    vb.memory = "16000"
-    vb.cpus = 6
-   # vb.customize ["modifyvm", :id, "--cpuexecutioncap","80"]
+		# This next thing doesn't seem to be working (for now):
+		# vb.customize ["modifyvm", :id, "--cpuexecutioncap","80"]
 	
- end
-  #
-  # View the documentation for the provider you are using for more
-
+	 end 
 # / ****************** VBox End ****************** /
 
 # / ****************** TP Custom: ****************** /
-  # SSH & X11 stuff and things:
-  config.ssh.forward_x11 = true
-#  config.ssh.host = "127.0.0.1"
-#  config.ssh.port = 8008
+	# SSH & X11 stuff and things:
+	config.ssh.forward_x11 = true
+	#  config.ssh.host = "127.0.0.1"
+	#  config.ssh.port = 8008
 
 # / ****************** Custom End ****************** /
 
 # / ****************** Provisioning: ****************** /
-   
-  # Enable provisioning with a shell script. Additional provisioners such as
-  # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
-  # documentation for more information about their specific syntax and use.
-  # config.vm.provision "shell", inline: <<-SHELL
-  #   sudo apt update
-  #   sudo apt upgrade -y
-  # SHELL
-
-# / ****************** TP Scripts:  ****************** /
-  $add_hakcypuppy = <<-SCRIPT
-  echo hakcypuppy...
-  SCRIPT
-
-  $install = <<-SCRIPT
-  echo "installing python"
-  sudo apt install -y crowbar
-  SCRIPT
-
-  config.vm.provision "shell", inline: <<-SHELL
-      sudo apt update
-      sudo apt upgrade -y
-  SHELL
-
-  config.vm.provision "shell", inline: $add_hakcypuppy
-  config.vm.provision "shell", inline: $install
+	config.vm.provision "shell" path: "scripts/maintenance.sh", privileged = true, preserve_order: true
+	config.vm.provision
 
 # / ****************** Provisioning End ****************** /
 
