--- a/kali-HTB/Vagrantfile
+++ b/kali-HTB/Vagrantfile
@@ -12,6 +12,10 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
+# Some variables you might want to change later:
+HOME_CONFIG_DIR = "/r/a-trshp-does-windows/Vagrant/kali-HTB/configs"
+VM_CONFIG_DIR = "~/home/vagrant/configs"
+
 # / ****************** Start the Madness: ****************** /
 Vagrant.configure("2") do |config|
 	# This is our box:
@@ -22,7 +26,12 @@ Vagrant.configure("2") do |config|
 
 	# We don't want the VM to access our Vfile:
     config.vm.synced_folder ".", "/vagrant", disabled: true
+	
+	# Give our box some config files, to make these real nice and automated:
+#	config.vm.synced_folder HOME_CONFIG_DIR, VM_CONFIG_DIR 
+config.vm.synced_folder HOME_CONFIG_DIR, VM_CONFIG_DIR, SharedFoldersEnableSymlinksCreate: false
 
+#
  # / ****************** VirtualBox Configs ****************** /
 	config.vm.provider "virtualbox" do |vb|
 		vb.name = "kali-HTB"
@@ -49,9 +58,10 @@ Vagrant.configure("2") do |config|
 # / ****************** Custom End ****************** /
 
 # / ****************** Provisioning: ****************** /
-	config.vm.provision "shell" path: "scripts/maintenance.sh", privileged = true, preserve_order: true
-	config.vm.provision
+	config.vm.provision "shell", path: "scripts/maintenance.sh", privileged: true 
+	config.vm.provision "shell", path: "scripts/install_tools.sh", privileged: true
+	config.vm.provision "shell", path: "scripts/configurations.sh", privileged: true
 
-# / ****************** Provisioning End ****************** /
+# / ****************** Provisioning End ****************** / 
 
 end
