--- a/kali-HTB/Vagrantfile
+++ b/kali-HTB/Vagrantfile
@@ -3,10 +3,13 @@
 # vi: set ft=ruby :
 
 # Some variables you might want to change later:
-HOME_CONFIG_DIR = "./configs" 
+HOST_SHARED_SCRIPTS_DIR = "../shared-scripts"
+VM_SHARED_SCRIPTS_DIR = "/home/vagrant/shared-scripts"
+
+HOST_CONFIG_DIR = "configs" 
 VM_CONFIG_DIR = "/home/vagrant/configs"
 
-HOME_SCRIPTS_DIR = "scripts"
+HOST_SCRIPTS_DIR = "scripts"
 VM_SCRIPTS_DIR = "/home/vagrant/scripts"
 VM_SHELL_PATH = "/usr/bin/zsh"
 
@@ -23,9 +26,9 @@ Vagrant.configure("2") do |config|
   config.vm.synced_folder ".", "/vagrant", disabled: true
 
   # Give our box some config files, to make these real nice and automated:
-  #	config.vm.synced_folder HOME_CONFIG_DIR, VM_CONFIG_DIR 
-  config.vm.synced_folder HOME_CONFIG_DIR, VM_CONFIG_DIR, SharedFoldersEnableSymlinksCreate: false
-  config.vm.synced_folder HOME_SCRIPTS_DIR, VM_SCRIPTS_DIR, SharedFoldersEnableSymlinksCreate: false
+  config.vm.synced_folder HOST_SHARED_SCRIPTS_DIR, VM_SHARED_SCRIPTS_DIR, SharedFoldersEnableSymlinksCreate: false 
+  config.vm.synced_folder HOST_CONFIG_DIR, VM_CONFIG_DIR, SharedFoldersEnableSymlinksCreate: false
+  config.vm.synced_folder HOST_SCRIPTS_DIR, VM_SCRIPTS_DIR, SharedFoldersEnableSymlinksCreate: false
   
 # / ****************** VirtualBox Configs ****************** /
   config.vm.provider "virtualbox" do |vb|
@@ -61,12 +64,23 @@ Vagrant.configure("2") do |config|
     #  config.vm.provision "shell", path: "scripts/maintenance.sh"	
 	# config.vm.provision "shell", path: "scripts/install_tools.sh", privileged: true
 	# hhconfig.vm.provision "shell", path: "scripts/configurations.sh", privileged: true
-    
+  
+  # Shared Scripts:
     config.vm.provision "shell",
-      inline: "#{VM_SHELL_PATH} #{VM_SCRIPTS_DIR}/maintenance.sh"
+      inline: "#{VM_SHELL_PATH} #{VM_SHARED_SCRIPTS_DIR}/maintenance.sh"
+
+    config.vm.provision "shell",
+      inline: "#{VM_SHELL_PATH} #{VM_SHARED_SCRIPTS_DIR}/install_shared_tools.sh"
+      
+
+  # config.vm.provision "shell",
+  #    jnline: "#{VM_SHELL_PATH} #{VM_SCRIPTS_DIR}/maintenance.sh"
     
     config.vm.provision "shell",
       inline: "#{VM_SHELL_PATH} #{VM_SCRIPTS_DIR}/install_tools.sh"
+
+    config.vm.provision "shell",
+      inline: "#{VM_SHELL_PATH} #{VM_SCRIPTS_DIR}/install_pmk.sh"
 
 # / ****************** Provisioning End ****************** / 
 
