--- a/ubuntu-dev/Vagrantfile
+++ b/ubuntu-dev/Vagrantfile
@@ -6,6 +6,9 @@
 HOST_SHARED_SCRIPTS_DIR = "../shared-scripts"
 VM_SHARED_SCRIPTS_DIR = "/home/vagrant/shared-scripts"
 
+HOST_SHARED_CONFIGS_DIR = "../shared-configs"
+VM_SHARED_CONFIGS_DIR = "/home/vagrant/shared-configs"
+
 HOST_CONFIG_DIR = "configs" 
 VM_CONFIG_DIR = "/home/vagrant/configs"
 
@@ -27,6 +30,8 @@ Vagrant.configure("2") do |config|
 
   # Give our box some config files, to make these real nice and automated:
   config.vm.synced_folder HOST_SHARED_SCRIPTS_DIR, VM_SHARED_SCRIPTS_DIR, SharedFoldersEnableSymlinksCreate: false 
+  config.vm.synced_folder HOST_SHARED_CONFIGS_DIR, VM_SHARED_CONFIGS_DIR, SharedFoldersEnableSymlinksCreate: false 
+  
   config.vm.synced_folder HOST_CONFIG_DIR, VM_CONFIG_DIR, SharedFoldersEnableSymlinksCreate: false
   config.vm.synced_folder HOST_SCRIPTS_DIR, VM_SCRIPTS_DIR, SharedFoldersEnableSymlinksCreate: false
   
@@ -57,6 +62,11 @@ Vagrant.configure("2") do |config|
 
 # / ****************** Provisioning: ****************** /
   
+  # We want to add our configure files before we install tools (probably):
+  # Config scripts:
+    config.vm.provision "shell",   
+      inline: "#{VM_SHELL_PATH} #{VM_SCRIPTS_DIR}/configure.sh"
+  
   # Shared Scripts:
     config.vm.provision "shell",
       inline: "#{VM_SHELL_PATH} #{VM_SHARED_SCRIPTS_DIR}/maintenance.sh"
@@ -68,6 +78,7 @@ Vagrant.configure("2") do |config|
     config.vm.provision "shell",
       inline: "#{VM_SHELL_PATH} #{VM_SCRIPTS_DIR}/install_tools.sh"
 
+      
 # / ****************** Provisioning End ****************** / 
 
 end
