--- a/kali-HTB/Vagrantfile
+++ b/kali-HTB/Vagrantfile
@@ -4,7 +4,6 @@
 
 # Some variables you might want to change later:
 HOST_SHARED_SCRIPTS_DIR = "../shared-scripts"
-#VM_SHARED_SCRIPTS_DIR = "/home/vagrant/shared-scripts"
 VM_SHARED_SCRIPTS_DIR = "/tmp/vagrant/shared-scripts"
 
 HOST_SHARED_CONFIGS_DIR = "../shared-configs"
@@ -21,7 +20,7 @@ VM_SHELL_PATH = "/usr/bin/zsh"
   user = "hakcypuppy"
   user_home = "/home/$user"
 
-# / ****************** Start the Madness: ****************** /
+#                         -------- START the Madness --------
 Vagrant.configure("2") do |config|
 
   # This is our box:
@@ -36,10 +35,11 @@ Vagrant.configure("2") do |config|
   # Give our box some config files, to make these real nice and automated:
   config.vm.synced_folder HOST_SHARED_CONFIGS_DIR, VM_SHARED_CONFIGS_DIR, SharedFoldersEnableSymlinksCreate: false
   config.vm.synced_folder HOST_SHARED_SCRIPTS_DIR, VM_SHARED_SCRIPTS_DIR, SharedFoldersEnableSymlinksCreate: false 
+ 
   config.vm.synced_folder HOST_CONFIG_DIR, VM_CONFIG_DIR, SharedFoldersEnableSymlinksCreate: false
   config.vm.synced_folder HOST_SCRIPTS_DIR, VM_SCRIPTS_DIR, SharedFoldersEnableSymlinksCreate: false
   
-# / ****************** VirtualBox Configs ****************** /
+#                         -------- VirtualBox Config:
   config.vm.provider "virtualbox" do |vb|
     vb.name = "kali-HTB"
 		
@@ -54,9 +54,17 @@ Vagrant.configure("2") do |config|
 	# vb.customize ["modifyvm", :id, "--cpuexecutioncap","80"]
 	
   end 
-# / ****************** VBox End ****************** /
+#                                  VirtualBox End: --------
 
-# / ****************** Provisioning: ****************** /
+#                         -------- TP Custom:
+	# SSH & X11 stuff and things:
+    #	config.ssh.forward_x11 = true
+	#  config.ssh.host = "127.0.0.1"
+	#  config.ssh.port = 8008
+
+#                                  Custom End: --------
+
+#                         -------- Provisioning:
  
   # We want to add our configure files before we install tools because configure.sh will make our user etc..:
   # Each script starts and ends w/ "cd /home/vagrant" to make it easy
@@ -79,9 +87,9 @@ Vagrant.configure("2") do |config|
     config.vm.provision "shell",
       inline: "#{VM_SHELL_PATH} #{VM_SCRIPTS_DIR}/install_pmk.sh"
 
-# / ****************** Provisioning End ****************** / 
+#                                  Provisioning End: -------- 
 
-# / ****************** Testing Script ****************** / 
+#                         -------- Testing:
 
   # Script to run after provisioning to see if everything worked:
     config.vm.provision "shell",
