--- a/ubuntu-dev/Vagrantfile
+++ b/ubuntu-dev/Vagrantfile
@@ -4,19 +4,23 @@
 
 # Some variables you might want to change later:
 HOST_SHARED_SCRIPTS_DIR = "../shared-scripts"
-VM_SHARED_SCRIPTS_DIR = "/home/vagrant/shared-scripts"
+VM_SHARED_SCRIPTS_DIR = "/tmp/vagrant/shared-scripts"
 
 HOST_SHARED_CONFIGS_DIR = "../shared-configs"
-VM_SHARED_CONFIGS_DIR = "/home/vagrant/shared-configs"
+VM_SHARED_CONFIGS_DIR = "/tmp/vagrant/shared-configs"
 
 HOST_CONFIG_DIR = "configs" 
-VM_CONFIG_DIR = "/home/vagrant/configs"
+VM_CONFIG_DIR = "/tmp/vagrant/configs"
 
 HOST_SCRIPTS_DIR = "scripts"
-VM_SCRIPTS_DIR = "/home/vagrant/scripts"
-VM_SHELL_PATH = "/usr/bin/sh"
+VM_SCRIPTS_DIR = "/tmp/vagrant/scripts"
+VM_SHELL_PATH = "/usr/bin/bash"
 
-# / ****************** Start the Madness: ****************** /
+  # New User:
+  user = "devpuppy"
+  user_home = "/home/$user"
+
+#                         -------- START the Madness --------
 Vagrant.configure("2") do |config|
 
   # This is our box:
@@ -35,7 +39,7 @@ Vagrant.configure("2") do |config|
   config.vm.synced_folder HOST_CONFIG_DIR, VM_CONFIG_DIR, SharedFoldersEnableSymlinksCreate: false
   config.vm.synced_folder HOST_SCRIPTS_DIR, VM_SCRIPTS_DIR, SharedFoldersEnableSymlinksCreate: false
   
-# / ****************** VirtualBox Configs ****************** /
+#                         -------- VirtualBox Config:
   config.vm.provider "virtualbox" do |vb|
     vb.name = "ubuntu-dev"
 		
@@ -50,17 +54,17 @@ Vagrant.configure("2") do |config|
 	# vb.customize ["modifyvm", :id, "--cpuexecutioncap","80"]
 	
   end 
-# / ****************** VBox End ****************** /
+#                                  VirtualBox End: --------
 
-# / ****************** TP Custom: ****************** /
+#                         -------- TP Custom:
 	# SSH & X11 stuff and things:
     #	config.ssh.forward_x11 = true
 	#  config.ssh.host = "127.0.0.1"
 	#  config.ssh.port = 8008
 
-# / ****************** Custom End ****************** /
+#                                  Custom End: --------
 
-# / ****************** Provisioning: ****************** /
+#                         -------- Provisioning:
   
   # We want to add our configure files before we install tools (probably):
   # Config scripts:
@@ -77,8 +81,13 @@ Vagrant.configure("2") do |config|
   # Dev lab specific:
     config.vm.provision "shell",
       inline: "#{VM_SHELL_PATH} #{VM_SCRIPTS_DIR}/install_tools.sh"
+    
+#                                  Provisioning End: -------- 
 
-      
-# / ****************** Provisioning End ****************** / 
+#                         -------- Testing:
+
+  # Script to run after provisioning to see if everything worked:
+    config.vm.provision "shell",
+    inline: "#{VM_SHELL_PATH} #{VM_SCRIPTS_DIR}/post_build_tests.sh"
 
 end
