--- a/ubuntu-dev/Vagrantfile
+++ b/ubuntu-dev/Vagrantfile
@@ -72,8 +72,8 @@ Vagrant.configure("2") do |config|
       inline: "#{VM_SHELL_PATH} #{VM_SCRIPTS_DIR}/configure.sh"
   
   # Shared Scripts:
-    config.vm.provision "shell",
-      inline: "#{VM_SHELL_PATH} #{VM_SHARED_SCRIPTS_DIR}/maintenance.sh"
+  #  config.vm.provision "shell",
+  #    inline: "#{VM_SHELL_PATH} #{VM_SHARED_SCRIPTS_DIR}/maintenance.sh"
     
     config.vm.provision "shell",
       inline: "#{VM_SHELL_PATH} #{VM_SHARED_SCRIPTS_DIR}/install_shared_tools.sh"
