--- a/ubuntu-dev/Vagrantfile
+++ b/ubuntu-dev/Vagrantfile
@@ -12,6 +12,9 @@ VM_SHARED_CONFIGS_DIR = "/tmp/vagrant/shared-configs"
 HOST_CONFIG_DIR = "configs" 
 VM_CONFIG_DIR = "/tmp/vagrant/configs"
 
+HOST_TUN = "tun/code"
+VM_TUN = "/home/devpuppy/tun"
+
 HOST_SCRIPTS_DIR = "scripts"
 VM_SCRIPTS_DIR = "/tmp/vagrant/scripts"
 VM_SHELL_PATH = "/usr/bin/bash"
@@ -38,6 +41,8 @@ Vagrant.configure("2") do |config|
   
   config.vm.synced_folder HOST_CONFIG_DIR, VM_CONFIG_DIR, SharedFoldersEnableSymlinksCreate: false
   config.vm.synced_folder HOST_SCRIPTS_DIR, VM_SCRIPTS_DIR, SharedFoldersEnableSymlinksCreate: false
+
+  config.vm.synced_folder HOST_TUN, VM_TUN, SharedFoldersEnableSymlinksCreate: false
   
 #                         -------- VirtualBox Config:
   config.vm.provider "virtualbox" do |vb|
