--- a/ubuntu-dev/Vagrantfile
+++ b/ubuntu-dev/Vagrantfile
@@ -42,7 +42,8 @@ Vagrant.configure("2") do |config|
   config.vm.synced_folder HOST_CONFIG_DIR, VM_CONFIG_DIR, SharedFoldersEnableSymlinksCreate: false
   config.vm.synced_folder HOST_SCRIPTS_DIR, VM_SCRIPTS_DIR, SharedFoldersEnableSymlinksCreate: false
 
-  config.vm.synced_folder HOST_TUN, VM_TUN, SharedFoldersEnableSymlinksCreate: false
+  config.vm.synced_folder HOST_TUN, VM_TUN, 
+    owner: "devpuppy", group: "devpuppy", SharedFoldersEnableSymlinksCreate: false
   
 #                         -------- VirtualBox Config:
   config.vm.provider "virtualbox" do |vb|
@@ -62,6 +63,8 @@ Vagrant.configure("2") do |config|
 #                                  VirtualBox End: --------
 
 #                         -------- TP Custom:
+
+config.ssh.username
 	# SSH & X11 stuff and things:
     #	config.ssh.forward_x11 = true
 	#  config.ssh.host = "127.0.0.1"
