--- a/ubuntu-dev/Vagrantfile
+++ b/ubuntu-dev/Vagrantfile
@@ -13,14 +13,14 @@ HOST_CONFIG_DIR = "configs"
 VM_CONFIG_DIR = "/tmp/vagrant/configs"
 
 HOST_TUN = "tun/code"
-VM_TUN = "/home/devpuppy/tun"
+VM_TUN = "/home/trshpuppy/tun"
 
 HOST_SCRIPTS_DIR = "scripts"
 VM_SCRIPTS_DIR = "/tmp/vagrant/scripts"
 VM_SHELL_PATH = "/usr/bin/bash"
 
   # New User:
-  user = "devpuppy"
+  user = "trshpuppy"
   user_home = "/home/$user"
 
 #                         -------- START the Madness --------
@@ -42,8 +42,12 @@ Vagrant.configure("2") do |config|
   config.vm.synced_folder HOST_CONFIG_DIR, VM_CONFIG_DIR, SharedFoldersEnableSymlinksCreate: false
   config.vm.synced_folder HOST_SCRIPTS_DIR, VM_SCRIPTS_DIR, SharedFoldersEnableSymlinksCreate: false
 
-  config.vm.synced_folder HOST_TUN, VM_TUN, 
-    owner: "devpuppy", group: "devpuppy", SharedFoldersEnableSymlinksCreate: false
+  # Tun shared folder (for coding):
+  config.vm.synced_folder HOST_TUN, VM_TUN,
+    id: "tun",
+    owner: "trshpuppy",
+    group: "trshpuppy",
+    mount_options: ["dmode=775,fmode=664"]
   
 #                         -------- VirtualBox Config:
   config.vm.provider "virtualbox" do |vb|
