--- a/ubuntu-dev/Vagrantfile
+++ b/ubuntu-dev/Vagrantfile
@@ -68,7 +68,7 @@ Vagrant.configure("2") do |config|
 
 #                         -------- SSH:
 
-  config.ssh.username = "trshpuppy"
+  #config.ssh.username = "trshpuppy"
 	# SSH & X11 stuff and things:
     #	config.ssh.forward_x11 = true
 	#  config.ssh.host = "127.0.0.1"
