--- a/ubuntu-dev/Vagrantfile
+++ b/ubuntu-dev/Vagrantfile
@@ -6,6 +6,8 @@
  # New User:
  USER = "trshpuppy"
  USER_HOME = "/home/#{USER}"
+ UID="1004"
+ GID="1004"
 
 HOST_SHARED_SCRIPTS_DIR = "../shared-scripts"
 VM_SHARED_SCRIPTS_DIR = "/tmp/vagrant/shared-scripts"
@@ -47,7 +49,7 @@ Vagrant.configure("2") do |config|
     id: "tun",
     owner: USER,
     group: USER,
-    mount_options: ["dmode=775,fmode=664"]
+    mount_options: ["uid=#{UID},gid=#{GID},dmode=775,fmode=664,umask=775"]
   
 #                         -------- VirtualBox Config:
   config.vm.provider "virtualbox" do |vb|
