--- a/ubuntu-dev/Vagrantfile
+++ b/ubuntu-dev/Vagrantfile
@@ -3,12 +3,6 @@
 # vi: set ft=ruby :
 
 # Some variables you might want to change later:
- # New User:
-#  USER = "trshpuppy"
-#  USER_HOME = "/home/#{USER}"
-#  UID="1004"
-#  GID="1004"
-
 HOST_SHARED_SCRIPTS_DIR = "../shared-scripts"
 VM_SHARED_SCRIPTS_DIR = "/tmp/vagrant/shared-scripts"
 
@@ -62,11 +56,11 @@ Vagrant.configure("2") do |config|
       inline: "#{VM_SHELL_PATH} #{VM_SHARED_SCRIPTS_DIR}/configure.sh"
   
   # Shared Scripts:
-  #  config.vm.provision "shell",
-  #    inline: "#{VM_SHELL_PATH} #{VM_SHARED_SCRIPTS_DIR}/maintenance.sh"
+    config.vm.provision "shell",
+      inline: "#{VM_SHELL_PATH} #{VM_SHARED_SCRIPTS_DIR}/maintenance.sh"
     
-  #   config.vm.provision "shell",
-  #     inline: "#{VM_SHELL_PATH} #{VM_SHARED_SCRIPTS_DIR}/install_shared_tools.sh"
+    config.vm.provision "shell",
+      inline: "#{VM_SHELL_PATH} #{VM_SHARED_SCRIPTS_DIR}/install_shared_tools.sh"
 
   # # Dev lab specific:
   #   config.vm.provision "shell",
