--- a/ubuntu-dev/Vagrantfile
+++ b/ubuntu-dev/Vagrantfile
@@ -52,22 +52,20 @@ Vagrant.configure("2") do |config|
   
   # We want to add our configure files before we install tools (probably):
   # Config scripts:
-    config.vm.provision "shell",   
-      inline: "#{VM_SHELL_PATH} #{VM_SHARED_SCRIPTS_DIR}/configure.sh"
-  
+  config.vm.provision "shell",   
+    inline: "#{VM_SHELL_PATH} #{VM_SHARED_SCRIPTS_DIR}/configure.sh"
+
   # Shared Scripts:
-    config.vm.provision "shell",
-      inline: "#{VM_SHELL_PATH} #{VM_SHARED_SCRIPTS_DIR}/maintenance.sh"
-    
-    config.vm.provision "shell",
-      inline: "#{VM_SHELL_PATH} #{VM_SHARED_SCRIPTS_DIR}/install_shared_tools.sh"
+  config.vm.provision "shell",
+    inline: "#{VM_SHELL_PATH} #{VM_SHARED_SCRIPTS_DIR}/install_shared_tools.sh"
 
-  # # Dev lab specific:
-  #   config.vm.provision "shell",
-  #     inline: "#{VM_SHELL_PATH} #{VM_SCRIPTS_DIR}/install_tools.sh"
+  # Dev lab specific:
+  config.vm.provision "shell",
+    inline: "#{VM_SHELL_PATH} #{VM_SCRIPTS_DIR}/install_tools.sh"
 
-  #   config.vm.provision "shell",
-  #     inline: "#{VM_SHELL_PATH} #{VM_SCRIPTS_DIR}/move_go_env.sh"
+  # Clean up and maintenance:
+  config.vm.provision "shell",
+    inline: "#{VM_SHELL_PATH} #{VM_SHARED_SCRIPTS_DIR}/maintenance.sh"
        
 #                                  Provisioning End: -------- 
 
