--- a/ubuntu-dev/Vagrantfile
+++ b/ubuntu-dev/Vagrantfile
@@ -64,21 +64,23 @@ Vagrant.configure("2") do |config|
 
 #          ---- Provisioning:
   # We want to add our configure files before we install tools (probably):
-  # Config script:
-  config.vm.provision "shell",   
+  if MOUNT_FOLDERS
+    # Config script:
+    config.vm.provision "shell",   
     inline: "#{VM_SHELL_PATH} #{VM_SHARED_SCRIPTS_DIR}/configure.sh"
 
-  # Shared Scripts:
-  config.vm.provision "shell",
+    # Shared Scripts:
+    config.vm.provision "shell",
     inline: "#{VM_SHELL_PATH} #{VM_SHARED_SCRIPTS_DIR}/install_shared_tools.sh"
 
-  # Dev lab specific:
-  config.vm.provision "shell",
+    # Dev lab specific:
+    config.vm.provision "shell",
     inline: "#{VM_SHELL_PATH} #{VM_SCRIPTS_DIR}/install_tools.sh"
 
-  # Clean up and maintenance:
-  config.vm.provision "shell",
+    # Clean up and maintenance:
+    config.vm.provision "shell",
     inline: "#{VM_SHELL_PATH} #{VM_SHARED_SCRIPTS_DIR}/maintenance.sh"
+  end
        
 #          ---- Provisioning End:
 # -------- MADNESS FINISHED.
