--- a/docker/go-env/Dockerfile
+++ b/docker/go-env/Dockerfile
@@ -81,13 +81,14 @@ ENV GOPATH /home/${USER}/repos
 
 # Update user's profile (probably overkill):
 RUN echo "GOPATH=/home/$USER/repos" >> /home/${USER}/.profile \
-    && echo "GOROOT=/home/$USER/go/go/bin" >> /home/${USER}/.profile \
-    && echo "PATH=\$PATH:\$GOROOT" >> /home/${USER}/.profile
+    && echo "GOROOT=/home/$USER/go/go" >> /home/${USER}/.profile \
+    && echo "PATH=\$PATH:\$GOROOT/bin" >> /home/${USER}/.profile
 
 
 #...... Add some files/ config files:
 COPY configs/.vimrc /home/${USER}
 COPY configs/.gitconfig /home/${USER}
 
+EXPOSE 8080
 # Enter the Dragon:
 ENTRYPOINT ["/bin/bash"]
